# llm_engineering

./: .gitignore  .pre-commit-config.yaml  flake.nix  pyproject.toml
week1/: day1.ipynb  day2 EXERCISE.ipynb  day2 EXERCISE_ollama_llama3.ipynb  day5.ipynb  week1 EXERCISE.ipynb
week1/solutions/: week1 SOLUTION.ipynb
week2/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  week2 EXERCISE.ipynb
week3/: day2.ipynb  day3.ipynb
