[project]
name = "llm"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv == 0.4.30",
    "loguru == 0.7.2",
    "selectolax == 0.3.26",
    "httpx == 0.27.2",
    "rich == 13.9.4",
    "extruct == 0.18.0",
    "playwright == 1.47.0",
    "beautifulsoup4 == 4.12.3",
    "anthropic == 0.39.0",
    "requests == 2.32.3",
    "mitmproxy == 11.0.1",
    "pydantic == 2.9.2",
    "debugpy == 1.8.9",
    "pyright == 1.1.389",
    "crawlee == 0.4.5",
    "parsel == 1.9.1",
    "tenacity == 9.0.0",
    "tqdm == 4.67.1",
    "pandas == 2.2.3",
    "orjson == 3.10.12",
    "xmltodict == 0.14.2",
    "openai == 1.58.1",
    "gradio == 5.9.1",
    "ipywidgets == 8.1.5",
    "ollama == 0.4.7"
]


[tool.pyright]
venvPath = "."
venv = ".direnv"
